# aptx-cli

./: .gitignore  AGENTS.md  README.md  UPGRADING.md
.github/workflows/: ci.yml
conformance/: README.md  run.py
conformance/baselines/: README.md  sdk-latest.json
conformance/cases/: decode-single.yaml  encode-single.yaml  multi-agent-simulate.yaml  multi-key-simulate.yaml  multi-sig-propose-simulate.yaml  sign-single-ed25519.yaml  single-simulate.yaml
docs/: architecture.md  keyless-cross-sdk.md  rust-ffi-guide.md  sdk-feedback.md
fixtures/bcs/: single-transfer-raw.hex
implementations/: README.md
implementations/go/: go.mod
implementations/go-v2/: README.md  go.mod  go.sum
implementations/go-v2/cmd/aptx/: confidential_asset.go  confidential_asset_native_cgo.go  confidential_asset_native_nocgo.go  main.go
implementations/go-v2/integration/: multi_agent_test.go
implementations/go-v2/scripts/get-confidential-balance/: main.go
implementations/go/cmd/aptx/: main.go
implementations/go/integration/: multisig_test.go
implementations/python/: README.md  pyproject.toml
implementations/python-v2/: README.md  pyproject.toml
implementations/python-v2/aptx_py_v2/: __main__.py  cli.py  sdk.py
implementations/python-v2/tests/: test_bcs.py
implementations/python/aptx_py/: cli.py  sdk.py
implementations/python/tests/: test_bcs.py
implementations/rust/: Cargo.toml  README.md
implementations/rust/src/: main.rs  sdk.rs
implementations/typescript/: README.md  package.json  pnpm-lock.yaml
implementations/typescript/scripts/: live-confidential-asset.ts  test-keyless-bcs.ts
implementations/typescript/src/: cli.ts
scripts/: set-sdk-version.sh  show-sdk-versions.sh
spec/: canonical-cli.md  confidential-asset.md  output-schema.json
tests/: live_confidential_asset_interop.py  live_multi_agent.py
