[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aptx-python"
version = "0.1.0"
description = "Python implementation of the Aptos transaction CLI targeting aptos-python-sdk"
requires-python = ">=3.10"
dependencies = [
    "aptos-sdk>=0.11.0",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = ["aptx_py"]
